{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 1209,
  "lineage": "8fd59601-1589-1852-0662-c52235d36a04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01993f1837ddfa6c4",
            "arn": "arn:aws:ec2:us-east-1:307946673854:elastic-ip/eipalloc-01993f1837ddfa6c4",
            "association_id": "eipassoc-001df9245b6dc7a95",
            "domain": "vpc",
            "id": "eipalloc-01993f1837ddfa6c4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f14b50a907990582",
            "private_dns": "ip-10-0-1-24.ec2.internal",
            "private_ip": "10.0.1.24",
            "public_dns": "ec2-34-205-234-226.compute-1.amazonaws.com",
            "public_ip": "34.205.234.226",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.public-rt",
            "aws_route_table_association.public1_assoc",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e574fa3398e056cd",
            "arn": "arn:aws:ec2:us-east-1:307946673854:elastic-ip/eipalloc-0e574fa3398e056cd",
            "association_id": "eipassoc-0051b53ecafe8924d",
            "domain": "vpc",
            "id": "eipalloc-0e574fa3398e056cd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e60862da4566c77c",
            "private_dns": "ip-10-0-3-112.ec2.internal",
            "private_ip": "10.0.3.112",
            "public_dns": "ec2-44-221-128-159.compute-1.amazonaws.com",
            "public_ip": "44.221.128.159",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.public-rt",
            "aws_route_table_association.public2_assoc",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:307946673854:instance/i-01e9cb1924f0e5f65",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01e9cb1924f0e5f65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mysql",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e25ba7b6ed58426",
            "private_dns": "ip-10-0-1-166.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.166",
            "public_ip": "54.162.41.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-026d78973b3f45b2a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b9bd72a618ec5eb",
            "tags": {
              "Name": "app-reviews-bastion"
            },
            "tags_all": {
              "Name": "app-reviews-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03b2267ad89951aa9"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.ecs_sg",
            "aws_subnet.public1",
            "aws_vpc.main",
            "tls_private_key.private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Internet_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:internet-gateway/igw-046d6d6895b34f765",
            "id": "igw-046d6d6895b34f765",
            "owner_id": "307946673854",
            "tags": {
              "Name": "app-reviews-IG-Public-\u0026-Private-VPC"
            },
            "tags_all": {
              "Name": "app-reviews-IG-Public-\u0026-Private-VPC"
            },
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "dependencies": [
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:loadbalancer/app/app-lb/f51c1e8aacdcbb8d",
            "arn_suffix": "app/app-lb/f51c1e8aacdcbb8d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-lb-30036288.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:307946673854:loadbalancer/app/app-lb/f51c1e8aacdcbb8d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03b2267ad89951aa9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0044a20639fb58698"
              },
              {
                "subnet_id": "subnet-07b9bd72a618ec5eb"
              }
            ],
            "subnets": [
              "subnet-0044a20639fb58698",
              "subnet-07b9bd72a618ec5eb"
            ],
            "tags": {
              "Name": "app-reviews-app_lb"
            },
            "tags_all": {
              "Name": "app-reviews-app_lb"
            },
            "vpc_id": "vpc-0af34ee26bc04e285",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:listener/app/app-lb/f51c1e8aacdcbb8d/b1857857d3bc1a13",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:targetgroup/app-tg/8e95368475d98042",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:307946673854:listener/app/app-lb/f51c1e8aacdcbb8d/b1857857d3bc1a13",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:loadbalancer/app/app-lb/f51c1e8aacdcbb8d",
            "mutual_authentication": [],
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "app-reviews-app-listner"
            },
            "tags_all": {
              "Name": "app-reviews-app-listner"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_lb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.ecs_sg",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:307946673854:targetgroup/app-tg/8e95368475d98042",
            "arn_suffix": "targetgroup/app-tg/8e95368475d98042",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:307946673854:targetgroup/app-tg/8e95368475d98042",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:307946673854:loadbalancer/app/app-lb/f51c1e8aacdcbb8d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "app-reviews-app-tg"
            },
            "tags_all": {
              "Name": "app-reviews-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01993f1837ddfa6c4",
            "association_id": "eipassoc-001df9245b6dc7a95",
            "connectivity_type": "public",
            "id": "nat-01eb23b834df07c2b",
            "network_interface_id": "eni-0f14b50a907990582",
            "private_ip": "10.0.1.24",
            "public_ip": "34.205.234.226",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07b9bd72a618ec5eb",
            "tags": {
              "Name": "app-reviews-Nat-Gateway_1"
            },
            "tags_all": {
              "Name": "app-reviews-Nat-Gateway_1"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP1",
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.public-rt",
            "aws_route_table_association.public1_assoc",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT_GATEWAY_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e574fa3398e056cd",
            "association_id": "eipassoc-0051b53ecafe8924d",
            "connectivity_type": "public",
            "id": "nat-0858dec3d8c19accb",
            "network_interface_id": "eni-0e60862da4566c77c",
            "private_ip": "10.0.3.112",
            "public_ip": "44.221.128.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0044a20639fb58698",
            "tags": {
              "Name": "app-reviews-Nat-Gateway_2"
            },
            "tags_all": {
              "Name": "app-reviews-Nat-Gateway_2"
            }
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP2",
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.public-rt",
            "aws_route_table_association.public2_assoc",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:route-table/rtb-0a97cf9fda4d45d32",
            "id": "rtb-0a97cf9fda4d45d32",
            "owner_id": "307946673854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01eb23b834df07c2b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-reviews - Route Table for NAT Gateway 1"
            },
            "tags_all": {
              "Name": "app-reviews - Route Table for NAT Gateway 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP1",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY_1",
            "aws_route_table.public-rt",
            "aws_route_table_association.public1_assoc",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:route-table/rtb-053efc825ca60b767",
            "id": "rtb-053efc825ca60b767",
            "owner_id": "307946673854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0858dec3d8c19accb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-reviews - Route Table for NAT Gateway 2"
            },
            "tags_all": {
              "Name": "app-reviews - Route Table for NAT Gateway 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP2",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY_2",
            "aws_route_table.public-rt",
            "aws_route_table_association.public2_assoc",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:route-table/rtb-08654ef4f93a8fe8b",
            "id": "rtb-08654ef4f93a8fe8b",
            "owner_id": "307946673854",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046d6d6895b34f765",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app-reviews-public-rt"
            },
            "tags_all": {
              "Name": "app-reviews-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024c1bdc0f0e822ce",
            "route_table_id": "rtb-0a97cf9fda4d45d32",
            "subnet_id": "subnet-0bcdba08bdf7b1f20"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP1",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY_1",
            "aws_route_table.NAT-Gateway-RT1",
            "aws_route_table.public-rt",
            "aws_route_table_association.public1_assoc",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00efb9ebfcbf8fb0a",
            "route_table_id": "rtb-053efc825ca60b767",
            "subnet_id": "subnet-08d4fabaca5b66cb2"
          },
          "dependencies": [
            "aws_eip.Nat-Gateway-EIP2",
            "aws_internet_gateway.Internet_Gateway",
            "aws_nat_gateway.NAT_GATEWAY_2",
            "aws_route_table.NAT-Gateway-RT2",
            "aws_route_table.public-rt",
            "aws_route_table_association.public2_assoc",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a3b032056ab706a",
            "route_table_id": "rtb-08654ef4f93a8fe8b",
            "subnet_id": "subnet-07b9bd72a618ec5eb"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.public-rt",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064cc33d2c6d1293a",
            "route_table_id": "rtb-08654ef4f93a8fe8b",
            "subnet_id": "subnet-0044a20639fb58698"
          },
          "dependencies": [
            "aws_internet_gateway.Internet_Gateway",
            "aws_route_table.public-rt",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BH-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:security-group/sg-0cd24a1a0b454b232",
            "description": "MySQL Access only from the EC2 Instances in public1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from Bastion Host",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd24a1a0b454b232",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Bastion Host SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-reviews-BH-SG",
            "name_prefix": "",
            "owner_id": "307946673854",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-reviews-BH-SG"
            },
            "tags_all": {
              "Name": "app-reviews-BH-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DB-SG-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:security-group/sg-0233958ffd39e376d",
            "description": "MySQL Bastion host access for updates!",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from MySQL BH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0233958ffd39e376d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Bastion Host SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd24a1a0b454b232"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysql-sg-bastion-host",
            "name_prefix": "",
            "owner_id": "307946673854",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.BH-SG",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:security-group/sg-03b2267ad89951aa9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ping",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b2267ad89951aa9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for webserver",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ping",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "app-reviews-ecs-sg_allow_ssh",
            "name_prefix": "",
            "owner_id": "307946673854",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-reviews-ecs-sg"
            },
            "tags_all": {
              "Name": "app-reviews-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:security-group/sg-0dc41cb184a0f0ee4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "output from MySQL",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc41cb184a0f0ee4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b2267ad89951aa9"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd24a1a0b454b232"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Bastion Host SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd24a1a0b454b232"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-reviews-rds-sg",
            "name_prefix": "",
            "owner_id": "307946673854",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-reviews"
            },
            "tags_all": {
              "Name": "app-reviews"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.BH-SG",
            "aws_security_group.ecs_sg",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.public1",
            "aws_subnet.public2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-0bcdba08bdf7b1f20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcdba08bdf7b1f20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-reviews-private1-subnet"
            },
            "tags_all": {
              "Name": "app-reviews-private1-subnet"
            },
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-08d4fabaca5b66cb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d4fabaca5b66cb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-reviews-private2-subnet"
            },
            "tags_all": {
              "Name": "app-reviews-private2-subnet"
            },
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-07b9bd72a618ec5eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b9bd72a618ec5eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-reviews-public1-subnet"
            },
            "tags_all": {
              "Name": "app-reviews-public1-subnet"
            },
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:subnet/subnet-0044a20639fb58698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0044a20639fb58698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "307946673854",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-reviews-public2-subnet"
            },
            "tags_all": {
              "Name": "app-reviews-public2-subnet"
            },
            "vpc_id": "vpc-0af34ee26bc04e285"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:307946673854:vpc/vpc-0af34ee26bc04e285",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e54d3c9594ed0aa",
            "default_route_table_id": "rtb-0224d42acfe096681",
            "default_security_group_id": "sg-04f910a1333a66383",
            "dhcp_options_id": "dopt-018c17b64c4b66faf",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af34ee26bc04e285",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0224d42acfe096681",
            "owner_id": "307946673854",
            "tags": {
              "Name": "app-reviews"
            },
            "tags_all": {
              "Name": "app-reviews"
            }
          }
        }
      ]
    }
  ]
}